--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -12,10 +12,45 @@
       transform: rotateY(180deg);
     }
   }
+
   &.is-flipped {
     .card-face-front,
     .card-face-back {
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    }
+  }
+  &.is-matched{
+    animation-duration: 0.5s;
+    animation-name: rubberBand;
+
+    @keyframes rubberBand {
+      from {
+        transform: scale3d(1, 1, 1);
+      }
+    
+      30% {
+        transform: scale3d(1.25, 0.75, 1);
+      }
+    
+      40% {
+        transform: scale3d(0.75, 1.25, 1);
+      }
+    
+      50% {
+        transform: scale3d(1.15, 0.85, 1);
+      }
+    
+      65% {
+        transform: scale3d(0.95, 1.05, 1);
+      }
+    
+      75% {
+        transform: scale3d(1.05, 0.95, 1);
+      }
+    
+      to {
+        transform: scale3d(1, 1, 1);
+      }
     }
   }
   .card-faces-container {
